[package]
name = "mtg-archiver-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite"] }
reqwest = { version = "0.11.11", features = ["json", "gzip", "blocking"] }
